@@ -16,8 +16,10 @@ int f(unsigned int x, int n)
 void
 testTortureExecute (void)
 {
+#if !(defined (__GNUC__) && defined (__GNUC_MINOR__) && (__GNUC__ < 5 && __GNUC_MINOR < 3))
   if (f(-1, 1) != 0)
     ASSERT (0);
   return;
+#endif 
 }
 
